--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,17 @@ body {
   background-color: #f8f9fa;
 }
 
+#tablePemasukan {
+  table-layout: fixed;
+  width: 100%;
+  word-wrap: break-word;
+}
+
+.table-responsive {
+  overflow-x: hidden !important;
+}
+
+
 .main-content {
   max-width: 960px;
   margin: 0 auto;
