--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -173,6 +173,20 @@ body {
   overflow-x: auto;
 }
 
-.table-responsive::-webkit-scrollbar {
-  display: none;
-}
+
+  .chart-wrapper {
+    max-width: 500px;
+    min-width: 300px;
+    width: 100%;
+  }
+
+  .chart-wrapper-pie {
+    max-width: 350px; /* Pie lebih kecil sedikit */
+  }
+
+  .chart-wrapper canvas {
+    width: 100% !important;
+    height: auto !important;
+  }
+
+
