--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -190,3 +190,18 @@ body {
   }
 
 
+.table-responsive::-webkit-scrollbar {
+  display: none;
+}
+#tablePemasukan th,
+#tablePemasukan td,
+#tablePemasukan th *,
+#tablePemasukan td * {
+  white-space: nowrap !important;
+}
+.table table-striped th,
+.table table-striped td,
+.table table-striped th *,
+.table table-striped td * {
+  white-space: nowrap !important;
+}
